@@ -3,12 +3,12 @@
 namespace Drupal\search_api\Plugin\search_api\display;
 
 /**
- * Represents a Views page display.
+ * Represents a Views REST display.
  *
  * @SearchApiDisplay(
- *   id = "views_page",
- *   views_display_type = "page",
+ *   id = "views_rest",
+ *   views_display_type = "rest_export",
  *   deriver = "Drupal\search_api\Plugin\search_api\display\ViewsDisplayDeriver"
  * )
  */
-class ViewsPageDisplay extends ViewsDisplayBase {}
+class ViewsRest extends ViewsDisplayBase {}
